--- a/Index.html
+++ b/Index.html
@@ -33,17 +33,40 @@
                     Elizabeth Lara González
                 </h2>
             </div>
-
-    </header>
-    <aside>
-
+        </header>
+        
+        <aside>
+            <div class="linea">
+                <hr class="linea-central">
+            </div>
+            <div class="titulo">
+                <div class="sub-titulo">
+                    <span class="m-0">
+                        Diseñador gráfico || UI/UX || Diseño Editorial || Motion Graphics || Branding || Desarrollo Web 
+                    </span>
+                </div>
+            </div>
+            <div class="linea">
+                <hr class="linea-central">
+            </div>
+            <div class="seccion1 container">
+                <div class="seccion1-titulo">
+                    <span class="col-4">Editorial</span>
+                    <img src="./imagen_seccion-editorial.jpg" alt="">
+                    <span class="col-4"> ui/ux</span>
+                    <img src="./imagen_seccion-ui.jpg" alt="">
+                    <span class="col-4">Marketing</span>
+                </div>
+                <div class="secciones-imagenes">
+                    
+                </div>
+            </div>
     </aside>
     <footer>
         <div class="contenedor">
             <img src="./Multimedia/img/icono-github.png" alt="">
             <img src="./Multimedia/img/icono_behance.png" alt="">
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
