animacion nav bar

--- a/Index.html
+++ b/Index.html
@@ -20,9 +20,20 @@
 
 <body>
     <header>
-        <nav class="navegador ">
+        <section class="color-1">
+            <nav class="navegador cl-effect-14" id="cl-effect-14">
+                <a href="./Pages/Editorial.html">Editorial</a>
+                <a href="#">Marketing</a>
+                <a href="#">Edición de video</a>
+                <a href="#">Imágen corporativa</a>
+                <a href="#">3D</a>
+                <a href="#">Ui/Ux</a>
+                <a href="#">Ilustración</a>
+            </nav>
+        </section>
+        <!-- <nav class="navegador">
             <ul class="navegador-contenedor container ">
-                <li>Editorial</li>
+                <li><a href="../Editorial.html"></a>Editorial</li>
                 <li>Marketing</li>
                 <li>Edición de video</li>
                 <li>Imágen corporativa</li>
@@ -30,7 +41,7 @@
                 <li>Ui/Ux</li>
                 <li>Ilustración</li>
             </ul>
-        </nav>
+        </nav> -->
         <div class="titulo-home">
             <h2>
                 Elizabeth Lara González
@@ -38,7 +49,7 @@
         </div>
     </header>
 
-    <aside>
+    <section class="container">
         <div class="linea">
             <hr class="linea-central">
         </div>
@@ -52,63 +63,79 @@
         <div class="linea">
             <hr class="linea-central">
         </div>
-        <div class="seccion1 container">
-            <div class="seccion1-titulo">
-                <span>Editorial</span>
-                <span> ui/ux</span>
-                <span>Marketing</span>
+        <div class="seccion row">
+            <div class="col-12 col-md-4 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo">Editorial</h4>
+                <img class="seccion-imagenes" src="./Multimedia/editorial.png" alt="">
             </div>
-            <div class="seccion1-imagenes container">
-                <img src="./Multimedia/editorial.png" alt="">
-                <img src="./Multimedia/ui-ux.png" alt="">
-                <img src="./Multimedia/marketing.png" alt="">
+            <div class="col-12 col-md-4 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo"> ui/ux</h4>
+                <img class="seccion-imagenes" src="./Multimedia/ui-ux.png" alt="">
+            </div>
+            <div class="col-12 col-md-4 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo">Marketing</h4>
+                <img class="seccion-imagenes" src="./Multimedia/marketing.png" alt="">
+            </div>
+        </div>
+        <div class="seccion row">
+            <div class="col-12 col-md-3 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo">Editorial</h4>
+                <img class="seccion-imagenes-2" src="./Multimedia/editorial.png" alt="">
+            </div>
+            <div class="col-12 col-md-3 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo"> ui/ux</h4>
+                <img class="seccion-imagenes-2" src="./Multimedia/ui-ux.png" alt="">
+            </div>
+            <div class="col-12 col-md-3 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo">Marketing</h4>
+                <img class="seccion-imagenes-2" src="./Multimedia/marketing.png" alt="">
+            </div>
+            <div class="col-12 col-md-3 d-flex ustify-content-center flex-column align-items-center">
+                <h4 class="seccion-titulo">Marketing</h4>
+                <img class="seccion-imagenes-2" src="./Multimedia/marketing.png" alt="">
             </div>
         </div>
 
-        <div class="seccion2 container">
-            <div class="seccion2-titulo">
-                <span>Editorial</span>
-                <span> ui/ux</span>
-                <span>Marketing</span>
-                <span>Marketing</span>
-            </div>
-            <div class="seccion2-imagenes">
-                <img src="./Multimedia/editorial.png" alt="">
-                <img src="./Multimedia/ui-ux.png" alt="">
-                <img src="./Multimedia/marketing.png" alt="">
-                <img src="./Multimedia/marketing.png" alt="">
-            </div>
-        </div>
-
-        <div class="perfil ">
-            <div class="perfil-foto">
-                <img src="./Multimedia/imagen web_foto.png" alt="">
-            </div>
-            <div class="perfil-info">
-                <h5>Perfil</h5>
-                <div class="perfil-info-texto">
-                    <p>
-                        Hola soy diseñadora gráfica con una experiencia profesional de 10 años en el sector. Entre
-                        mis habilidades se encuentran el diseño editorial, la edición de fotografía, el video y el
-                        motion graphic. Además, cuento con estudios en UI/UX y desarrollo web que me han permitido ampliar mis conocimientos y habilidades.
-                        <br> <br>
-                        Me apasiona mucho lo que hago y siempre doy lo mejor de mí en cada proyecto. Trabajar en equipo
-                        es algo que me gusta mucho, ya que creo que se pueden lograr grandes cosas cuando se unen las
-                        ideas y habilidades de varias personas. También me considero una persona con hambre de
-                        conocimientos, por lo que siempre estoy en la búsqueda de nuevas oportunidades de aprendizaje.
-                        <br><br>
-                        En mi tiempo libre, disfruto mucho estudiando e investigando sobre nuevas tendencias y
-                        herramientas en el mundo del diseño gráfico. Creo que esto me motiva a ser mejor cada día y me
-                        permite estar siempre actualizada en un campo tan cambiante como este.
-                        Espero tener la oportunidad de trabajar ustedes y de poner en práctica mis habilidades y
-                        conocimientos para lograr juntos grandes resultados.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </aside>
-    <footer>
         
+    </section>
+
+    <div class="perfil ">
+        <div class="perfil-foto">
+            <img src="./Multimedia/imagen web_foto.png" alt="">
+        </div>
+        <div class="perfil-info">
+            <h5>Perfil</h5>
+            <div class="perfil-info-texto">
+                <p>
+                    Hola soy diseñadora gráfica con una experiencia profesional de 10 años en el sector. Entre
+                    mis habilidades se encuentran el diseño editorial, la edición de fotografía, el video y el
+                    motion graphic. Además, cuento con estudios en UI/UX y desarrollo web que me han permitido
+                    ampliar mis conocimientos y habilidades.
+                    <br> <br>
+                    Me apasiona mucho lo que hago y siempre doy lo mejor de mí en cada proyecto. Trabajar en equipo
+                    es algo que me gusta mucho, ya que creo que se pueden lograr grandes cosas cuando se unen las
+                    ideas y habilidades de varias personas. También me considero una persona con hambre de
+                    conocimientos, por lo que siempre estoy en la búsqueda de nuevas oportunidades de aprendizaje.
+                    <br><br>
+                    En mi tiempo libre, disfruto mucho estudiando e investigando sobre nuevas tendencias y
+                    herramientas en el mundo del diseño gráfico. Creo que esto me motiva a ser mejor cada día y me
+                    permite estar siempre actualizada en un campo tan cambiante como este.
+                    Espero tener la oportunidad de trabajar ustedes y de poner en práctica mis habilidades y
+                    conocimientos para lograr juntos grandes resultados.
+                </p>
+            </div>
+            <div>
+                <a href="https://drive.google.com/drive/folders/1_OfV2vnBhmN55nnneXN2N6pB_0bHVMRP?usp=drive_link">
+                    <button type="button" class="btn boton-cv"
+                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        Descargar CV
+                    </button></a>
+
+            </div>
+        </div>
+    </div>
+    <footer>
+
         <div class="contenedor">
             <a href="https://github.com/elilaragon"><img src="./Multimedia/img/icono-github.png" alt=""></a>
             <a href="https://www.behance.net/elizabethlarag"><img src="./Multimedia/img/icono_behance.png" alt=""></a>
