galeria de imagenes

--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,8 @@
 
 <body>
     <header>
-        <section class="color-1">
-            <nav class="navegador cl-effect-14" id="cl-effect-14">
+        <section class="color-1 navegador">
+            <nav class="navegador-contenedor cl-effect-1">
                 <a href="./Pages/Editorial.html">Editorial</a>
                 <a href="#">Marketing</a>
                 <a href="#">Edición de video</a>
@@ -31,17 +31,6 @@
                 <a href="#">Ilustración</a>
             </nav>
         </section>
-        <!-- <nav class="navegador">
-            <ul class="navegador-contenedor container ">
-                <li><a href="../Editorial.html"></a>Editorial</li>
-                <li>Marketing</li>
-                <li>Edición de video</li>
-                <li>Imágen corporativa</li>
-                <li>3D</li>
-                <li>Ui/Ux</li>
-                <li>Ilustración</li>
-            </ul>
-        </nav> -->
         <div class="titulo-home">
             <h2>
                 Elizabeth Lara González
