--- a/Pages/Editorial.html
+++ b/Pages/Editorial.html
@@ -2,60 +2,144 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="diseno, editorial, Ui/Ux">
-    <title>Elizabeth Lara</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Scss/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Martel:wght@200;300;400;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-        rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="diseno, editorial, Ui/Ux">
+  <title>Elizabeth Lara</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="../Scss/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Martel:wght@200;300;400;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
 
 </head>
 
 <body>
-    <header>
-        <nav class="navegador ">
-            <ul class="navegador-contenedor container ">
-                
-                <li><a href="./Editorial.html"></a>Editorial</li>
-                <li>Marketing</li>
-                <li>Edición de video</li>
-                <li>Imágen corporativa</li>
-                <li>3D</li>
-                <li>Ui/Ux</li>
-                <li>Ilustración</li>
-            </ul>
-        </nav>
-        <div class="titulo-seccion">
-            <h2>
-                Editorial
-            </h2>
-        </div>
-    </header>
-    <aside>
-<div class="seccion-contenedor container">
+  <header>
+    <section class="color-1 navegador">
+      <nav class="navegador-contenedor cl-effect-1">
+        <a href="./Editorial.html">Editorial</a>
+        <a href="./Marketing.html">Marketing</a>
+        <a href="./Edicion-video.html">Edición de video</a>
+        <a href="./Imagen-corporativa.html">Imágen corporativa</a>
+        <a href="./3d.html">3D</a>
+        <a href="./ui-ux.html">Ui/Ux</a>
+        <a href="./ilustracion.html">Ilustración</a>
+      </nav>
+    </section>
+    <div class="titulo-seccion">
+      <h2>
+        Editorial
+      </h2>
+    </div>
+  </header>
+  <div class="seccion-contenedor container">
     <h4 class="seccion-subtitulo">Variedades</h4>
     <img src="../Multimedia/linea_secciones.png" alt="">
-</div>
-    </aside>
-    <footer>
-
-        <div class="contenedor">
-            <a href="https://github.com/elilaragon"><img src="../Multimedia/img/icono-github.png" alt=""></a>
-            <a href="https://www.behance.net/elizabethlarag"><img src="../Multimedia/img/icono_behance.png" alt=""></a>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  </div>
+  <div id="carouselExampleIndicators" class="carousel slide container">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" class="active"
+        aria-current="true" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+        aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+        aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+        aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+        aria-label="Slide 7"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
+        aria-label="Slide 9"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../Multimedia/VAR_01_WEB_w83fg1.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_02_WEB_ftwjjp.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_03_WEB_wa7h4b.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_04_WEB_daktns.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_05_WEB_daahab.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_06_WEB_yhqghb.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_07_WEB_woj21p.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_08_WEB_w6brwe.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_09_WEB_fnjwc2.webp" class="d-flex w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../Multimedia/VAR_10_WEB_lj0dkc.webp" class="d-flex w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="seccion-contenedor container">
+    <h4 class="seccion-subtitulo">Playboy</h4>
+    <img src="../Multimedia/linea_secciones.png" alt="">
+  </div>
+  <div class="galeria">
+    <div class="galeria-item item1"><img src="../Multimedia/PLAYBOY_001.png" alt=""></div>
+    <div class="galeria-item item2"><img src="../Multimedia/PLAYBOY_002.png" alt=""></div>
+    <div class="galeria-item item3"><img src="../Multimedia/PLAYBOY_003.png" alt=""></div>
+    <div class="galeria-item item4"><img src="../Multimedia/PLAYBOY_004.png" alt=""></div>
+    <div class="galeria-item item5"><img src="../Multimedia/PLAYBOY_005.png" alt=""></div>
+    <div class="galeria-item item6"><img src="../Multimedia/PLAYBOY_006.png" alt=""></div>
+    <div class="galeria-item item7"><img src="../Multimedia/PLAYBOY_007.png" alt=""></div>
+    <div class="galeria-item item8"><img src="../Multimedia/PLAYBOY_009.png" alt=""></div>
+    <div class="galeria-item item9"><img src="../Multimedia/PLAYBOY_010.png" alt=""></div>
+    <div class="galeria-item item10"><img src="../Multimedia/PLAYBOY_011.png" alt=""></div>
+    <div class="galeria-item item11"><img src="../Multimedia/PLAYBOY_012.png" alt=""></div>
+    <div class="galeria-item item12"><img src="../Multimedia/PLAYBOY_013.png" alt=""></div>
+    <div class="galeria-item item13"><img src="../Multimedia/PLAYBOY_014.png" alt=""></div>
+    <div class="galeria-item item14"><img src="../Multimedia/PLAYBOY_015.png" alt=""></div>
+    <div class="galeria-item item15"><img src="../Multimedia/PLAYBOY_016.png" alt=""></div>
+    <div class="galeria-item item16"><img src="../Multimedia/PLAYBOY_017.png" alt=""></div>
+    <div class="galeria-item item17"><img src="../Multimedia/PLAYBOY_018.png" alt=""></div>
+    <div class="galeria-item item17"><img src="../Multimedia/PLAYBOY_019.png" alt=""></div>
+  </div>
+  <footer>
+    <div>
+      <a href="https://github.com/elilaragon"><img src="../Multimedia/img/icono-github.png" alt=""></a>
+      <a href="https://www.behance.net/elizabethlarag"><img src="../Multimedia/img/icono_behance.png" alt=""></a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 
 </html>
